# eml6934-exam-2

./: README.md  localization.m  main.py  pyproject.toml
docs/: #exam_2.lyx#  exam_2.lyx
scripts/: ekf.py  filled_out.m  octave-workspace  plot_question_1.py
src/conf/: config_schema.py
src/io/: data_exporter.py  plotter.py  statistics.py
src/math/: controllers.py  dynamics.py  filters.py
src/simulation/: runner.py
