[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "jax-lqg-simulation"
version = "0.1.0"
description = "A hardware-accelerated Linear Quadratic Gaussian (LQG) control simulation built in JAX. Features a discrete/continuous Extended Kalman Filter (EKF), an infinite-horizon Linear Quadratic Regulator (LQR), and automated hyperparameter tuning via Optuna."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core Computation & Autodiff
    "jax>=0.4.13",
    "jaxlib>=0.4.13",
    
    # JAX Ecosystem additions
    "equinox>=0.11.0",
    "diffrax>=0.4.1",
    "jaxtyping>=0.2.20",
    
    # Scientific & Math computing
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    
    # Hyperparameter Sweep
    "optuna>=3.2.0",
    
    # Visualization & IO
    "matplotlib>=3.7.0"
]